welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:0: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime34.FlowerCase'
override def run(){
             ^